# syncro-solver

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  problemas.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: build.yml  check-commit.yml
src/: arquivo.rs  estado.rs  funcao.rs  letra.rs  main.rs  palavra.rs  problema.rs
src/model/: estado.rs  funcao.rs  letra.rs  mod.rs  palavra.rs  problema.rs
